# functional-connectivity

./: .gitignore  .pre-commit-config.yaml  01_playground.ipynb  README.md  base.ipynb  makefile  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
data/: n10612_6_230423_t162213_C.mat
docs/: conf.py
examples/: 01_getting_started.ipynb  02_Working_with_Dandi-sets.ipynb  02_interact_with_dandi.ipynb  03_unit_tests.ipynb  README.md
fc/: __init__.py
functional_connectivity/: __init__.py  io.py  utils.py
functional_connectivity/generators/: graphical_model.py
functional_connectivity/readwrite/: __init__.py  dandi_handler.py  data_handler.py
functional_connectivity/utils/: utils.py
scripts/: pyproject2req.py
utils/: __init__.py  firstOrderMethods.py  mat_op.py
