[tool.poetry]
name = "kavli-project"
version = "0.1.0"
description = "Code repository for a Kavli project"
authors = ["junipertcy <tzuchi.yen@colorado.edu>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "kavli_project"}]

[tool.poetry.dependencies]
python = "^3.9"
dandi = "^0.56.2"
urllib3 = "1.26.9"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
numba = "loky"
loky = "^3.4.1"
xarray = "^2023.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
