[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "functional-connectivity"
authors = [{ name = "Tzu-Chi Yen", email = "tzuchi.yen@colorado.edu" }]
description = "Sensing functional connectivity in the brain, in Python"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ['functional-connectivity', 'convex-optimization', 'graphical-models']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development :: Libraries',
]

dynamic = ["version"]

dependencies = [
    "urllib3 >= 2.2.1",
    "matplotlib >= 3.9.0",
    "numpy >= 1.26.4",
    "scikit-learn >= 1.5.0",
    "numba >= 0.59.1",
    "loky >= 3.4.1",
    "xarray >= 2024.5.0",
    "jupyterlab >= 4.2.1",
    "nwbwidgets >= 0.11.3",
    "dandi >= 0.62.1",
    "h5py >= 3.11.0",
    "networkx >= 3.3",
]

[project.optional-dependencies]
dev = ["pytest >= 8.2.1", "click >= 8.1.7", "sphinx >= 7.2.6"]

[project.urls]
repository = 'https://github.com/junipertcy/functional-connectivity'
documentation = 'https://docs.netscied.tw/functional-connectivity/index.html'

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["functional_connectivity"]

[tool.setuptools_scm]
write_to = "functional_connectivity/_version.py"

[tool.black]
line-length = 120
